--- a/flower shop.html
+++ b/flower shop.html
@@ -16,7 +16,7 @@
                 family=Jomhuria&family=Open+Sans:wght@300;400;500;600;700;800&
                 family=Roboto:wght@300&family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <title>flower website</title>
+    <title>flower shop</title>
 </head>
 
 <body>
